--- a/news-homepage-main/index.html
+++ b/news-homepage-main/index.html
@@ -116,12 +116,29 @@
           </div>
           <!--bar on the side -->
           <div class="col-sm-12 col-md-4 p-2">
-            <aside class="">25</aside>
+            <aside class="p-3" style="color: azure">
+              <h1 class="mt-5">New</h1>
+              <hr />
+              <p class="mt-5">
+                Hydrogen VS Electric Cars Will hydrogen-fueled cars ever catch
+                up to EVs?
+              </p>
+              <hr />
+              <p class="mt-5">
+                The Downsides of AI Artistry What are the possible adverse
+                effects of on-demand AI image generation?
+              </p>
+              <hr />
+              <p class="mt-5">
+                Is VC Funding Drying Up? Private funding by VC firms is down 50%
+                YOY. We take a look at what that means.
+              </p>
+            </aside>
           </div>
         </div>
         <!-- Last div -->
         <div class="">
-          <div class="row gx-3">
+          <div class="row gx-3 mb-5">
             <div class="col-3 col-md-1">
               <div class="p-1">
                 <img
@@ -131,10 +148,14 @@
                 />
               </div>
             </div>
-            <div class="col-6 col-md-2">
-              <div class="p-1">5jijikjjlf</div>
+            <div class="col-9 col-md-3">
+              <div class="p-1">
+                01 <br />
+                Reviving Retro PCs <br />
+                What happens when old PCs are given modern upgrades?
+              </div>
             </div>
-            <div class="col-6 col-md-2">
+            <div class="col-3 col-md-1">
               <div class="p-1">
                 <img
                   src="/news-homepage-main/assets/images/image-top-laptops.jpg"
@@ -143,10 +164,14 @@
                 />
               </div>
             </div>
-            <div class="col-6 col-md-2">
-              <div class="p1">ljjhoudhou2</div>
+            <div class="col-9 col-md-3">
+              <div class="p-1">
+                02 <br />
+                Top 10 Laptops of 2022 <br />
+                Our best picks for various needs and budgets.
+              </div>
             </div>
-            <div class="col-6 col-md-2">
+            <div class="col-3 col-md-1">
               <div class="p-1">
                 <img
                   src="/news-homepage-main/assets/images/image-gaming-growth.jpg"
@@ -155,8 +180,12 @@
                 />
               </div>
             </div>
-            <div class="col-6 col-md-2">
-              <div class="p-1">4KJHEFUHEFJOEO</div>
+            <div class="col-9 col-md-3">
+              <div class="p-1">
+                03 <br />
+                The Growth of Gaming <br />
+                How the pandemic has sparked fresh opportunities.
+              </div>
             </div>
           </div>
         </div>
